--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -7,6 +7,7 @@
     tools:context=".AddContactActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -16,28 +17,65 @@
         tools:layout_editor_absoluteX="10dp">
 
         <EditText
-            android:hint="Contact name"
             android:id="@+id/etNewContact"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Contact name"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/AddContact_nameError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone" />
 
         <EditText
-            android:hint="Nickname"
             android:id="@+id/etNickname"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Nickname"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/AddContact_NicknameError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text=""
+            android:visibility="gone" />
 
         <EditText
-            android:hint="Server"
             android:id="@+id/etServer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Server" />
+
+        <TextView
+            android:id="@+id/AddContact_ServerError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text=""
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btnSave"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:text="@string/btnSave" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/backToContacts"
+        android:layout_width="52dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="320dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.060000002"
+        app:srcCompat="@drawable/ic_action_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
