--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -35,12 +35,14 @@
     </LinearLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="16dp"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lstMessages"
             android:layout_width="match_parent"
@@ -84,7 +86,7 @@
             android:background="@android:color/transparent"
             android:hint="Enter Message"
             android:inputType="text"
-            android:maxLines="6"
+            android:maxLines="5"
             tools:ignore="Autofill" />
 
         <Button
