--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -28,7 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text=""
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:text="User"
             android:textSize="20dp" />
     </LinearLayout>
 
