pass image from list, add last message and last date to chat activity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -101,7 +101,7 @@
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:srcCompat="@android:mipmap/sym_def_app_icon"
+                app:srcCompat="@drawable/cat4"
                 android:layout_weight="2"
                 android:adjustViewBounds="true"/>
 
