--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/UserImage"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/cat4" />
@@ -30,7 +31,7 @@
             android:padding="20dp"
             android:textColor="@color/black"
             android:textAlignment="center"
-            android:text="User"
+            android:text=""
             android:textSize="20dp" />
     </LinearLayout>
 
