--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     android:textSize="30dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/changed_server"/>
+    android:text=""/>
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
