--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -9,41 +9,55 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:background="@color/white"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivPic"
             android:layout_width="70dp"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="5dp"
+            android:paddingStart="10dp">
 
-            <TextView
-                android:id="@+id/tvContact"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvContact"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="7dp"
+                    android:paddingEnd="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="19dp" />
+
+                <TextView
+                    android:id="@+id/tvLastDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:paddingEnd="10dp"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvLast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="7dp"
-                android:padding="5dp" />
-
-            <TextView
-                android:id="@+id/tvLastDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingStart="7dp"
                 android:padding="5dp"
-                android:textSize="3dp"/>
+                android:textSize="18dp" />
 
         </LinearLayout>
     </LinearLayout>
